tests/reference/asr-kwargs_01_error-ab9530d.stderr
semantic error: Variable 'arg1' not declared
 --> tests/errors/kwargs_01_error.py:9:5
  |
9 |     arg1 = 1
  |     ^^^^ 
